--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 		var ref = location.href.split("="); //index.html?variavel=valor; 0: antes do "=; 1: depois do "="
 		var auxValorRef = ref[1];
 		var replaceSpace = (/20%/g, " ");
-var replaceParagraph = replace".replace(/%0A/g, "<br>");
-var replaceAA = replaceSpace.replace(/21%/g, "!");
+var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
+var replaceAA = replaceParagraph.replace(/21%/g, "!");
 var replaceA1 = replaceAA.replace(/22%/g, """);
 var replaceA2 = replaceA1.replace(/23%/g, "#");
 var replaceA3 = replaceA2.replace(/24%/g, "$");
