--- a/index.html
+++ b/index.html
@@ -9,97 +9,97 @@
 	<script type="text/javascript">
 		var ref = location.href.split("="); //index.html?variavel=valor; 0: antes do "=; 1: depois do "="
 		var auxValorRef = ref[1];
-		var replaceSpace = (/20%/g, " ");
+		var replaceSpace = (/%20/g, " ");
 var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
-var replaceAA = replaceParagraph.replace(/21%/g, "!");
-var replaceA1 = replaceAA.replace(/22%/g, """);
-var replaceA2 = replaceA1.replace(/23%/g, "#");
-var replaceA3 = replaceA2.replace(/24%/g, "$");
-var replaceA4 = replaceA3.replace(/25%/g, "%");
-var replaceA5 = replaceA4.replace(/26%/g, "&");
-var replaceA6 = replaceA5.replace(/27%/g, "'");
-var replaceA7 = replaceA6.replace(/28%/g, "(");
-var replaceA8 = replaceA7.replace(/29%/g, ")");
+var replaceAA = replaceParagraph.replace(/%21/g, "!");
+var replaceA1 = replaceAA.replace(/%22/g, """);
+var replaceA2 = replaceA1.replace(/%23/g, "#");
+var replaceA3 = replaceA2.replace(/%24/g, "$");
+var replaceA4 = replaceA3.replace(/%25/g, "%");
+var replaceA5 = replaceA4.replace(/%26/g, "&");
+var replaceA6 = replaceA5.replace(/%27/g, "'");
+var replaceA7 = replaceA6.replace(/%28/g, "(");
+var replaceA8 = replaceA7.replace(/%29/g, ")");
 var replaceA9 = replaceA8.replace(/%2A/g, "*");
 var replaceB1 = replaceA9.replace(/%2B/g, "+");
 var replaceB2 = replaceB1.replace(/%2C/g, ",");
 var replaceB3 = replaceB2.replace(/%2D/g, "-");
 var replaceB4 = replaceB3.replace(/%2E/g, ".");
 var replaceB5 = replaceB4.replace(/%2F/g, "/");
-var replaceB6 = replaceB5.replace(/30%/g, "0");
-var replaceB7 = replaceB6.replace(/31%/g, "1");
-var replaceB8 = replaceB7.replace(/32%/g, "2");
-var replaceB9 = replaceB8.replace(/33%/g, "3");
-var replaceC1 = replaceB9.replace(/34%/g, "4");
-var replaceC2 = replaceC1.replace(/35%/g, "5");
-var replaceC3 = replaceC2.replace(/36%/g, "6");
-var replaceC4 = replaceC3.replace(/37%/g, "7");
-var replaceC5 = replaceC4.replace(/38%/g, "8");
-var replaceC6 = replaceC5.replace(/39%/g, "9");
+var replaceB6 = replaceB5.replace(/%30/g, "0");
+var replaceB7 = replaceB6.replace(/%31/g, "1");
+var replaceB8 = replaceB7.replace(/%32/g, "2");
+var replaceB9 = replaceB8.replace(/%33/g, "3");
+var replaceC1 = replaceB9.replace(/%34/g, "4");
+var replaceC2 = replaceC1.replace(/%35/g, "5");
+var replaceC3 = replaceC2.replace(/%36/g, "6");
+var replaceC4 = replaceC3.replace(/%37/g, "7");
+var replaceC5 = replaceC4.replace(/%38/g, "8");
+var replaceC6 = replaceC5.replace(/%39/g, "9");
 var replace2P = replaceC6.replace(/%3A/g, ":");
 var replaceSC = replace2P.replace(/%3B/g, ";");
 var replaceVG = replaceSC.replace(/%3C/g, "<");
 var replaceEQ = replaceVG.replace(/%3D/g, "=");
 var replaceC7 = replaceEQ.replace(/%3E/g, ">");
 var replaceC8 = replaceC7.replace(/%3F/g, "?");
-var replaceC9 = replaceC8.replace(/40%/g, "@");
-var replaceD1 = replaceC9.replace(/41%/g, "A");
-var replaceD2 = replaceD1.replace(/42%/g, "B");
-var replaceD3 = replaceD2.replace(/43%/g, "C");
-var replaceD4 = replaceD3.replace(/44%/g, "D");
-var replaceD5 = replaceD4.replace(/45%/g, "E");
-var replaceD6 = replaceD5.replace(/46%/g, "F");
-var replaceD7 = replaceD6.replace(/47%/g, "G");
-var replaceD8 = replaceD7.replace(/48%/g, "H");
-var replaceD9 = replaceD8.replace(/49%/g, "I");
+var replaceC9 = replaceC8.replace(/%40/g, "@");
+var replaceD1 = replaceC9.replace(/%41/g, "A");
+var replaceD2 = replaceD1.replace(/%42/g, "B");
+var replaceD3 = replaceD2.replace(/%43/g, "C");
+var replaceD4 = replaceD3.replace(/%44/g, "D");
+var replaceD5 = replaceD4.replace(/%45/g, "E");
+var replaceD6 = replaceD5.replace(/%46/g, "F");
+var replaceD7 = replaceD6.replace(/%47/g, "G");
+var replaceD8 = replaceD7.replace(/%48/g, "H");
+var replaceD9 = replaceD8.replace(/%49/g, "I");
 var replaceE1 = replaceD9.replace(/%4A/g, "J");
 var replaceE2 = replaceE1.replace(/%4B/g, "K");
 var replaceE3 = replaceE2.replace(/%4C/g, "L");
 var replaceE4 = replaceE3.replace(/%4D/g, "M");
 var replaceE5 = replaceE4.replace(/%4E/g, "N");
 var replaceE6 = replaceE5.replace(/%4F/g, "O");
-var replaceE7 = replaceE6.replace(/50%/g, "P");
-var replaceE8 = replaceE7.replace(/51%/g, "Q");
-var replaceE9 = replaceE8.replace(/52%/g, "R");
-var replaceF1 = replaceE9.replace(/53%/g, "S");
-var replaceF2 = replaceF1.replace(/54%/g, "T");
-var replaceF3 = replaceF2.replace(/55%/g, "U");
-var replaceF4 = replaceF3.replace(/56%/g, "V");
-var replaceF5 = replaceF4.replace(/57%/g, "W");
-var replaceF6 = replaceF5.replace(/58%/g, "X");
-var replaceF7 = replaceF6.replace(/59%/g, "Y");
+var replaceE7 = replaceE6.replace(/%50/g, "P");
+var replaceE8 = replaceE7.replace(/%51/g, "Q");
+var replaceE9 = replaceE8.replace(/%52/g, "R");
+var replaceF1 = replaceE9.replace(/%53/g, "S");
+var replaceF2 = replaceF1.replace(/%54/g, "T");
+var replaceF3 = replaceF2.replace(/%55/g, "U");
+var replaceF4 = replaceF3.replace(/%56/g, "V");
+var replaceF5 = replaceF4.replace(/%57/g, "W");
+var replaceF6 = replaceF5.replace(/%58/g, "X");
+var replaceF7 = replaceF6.replace(/%59/g, "Y");
 var replaceF8 = replaceF7.replace(/%5A/g, "Z");
 var replaceF9 = replaceF8.replace(/%5B/g, "[");
 var replaceG1 = replaceF9.replace(/%5C/g, "\");
 var replaceG2 = replaceG1.replace(/%5D/g, "]");
 var replaceG3 = replaceG2.replace(/%5E/g, "^");
 var replaceG4 = replaceG3.replace(/%5F/g, "_");
-var replaceG5 = replaceG4.replace(/60%/g, "`");
-var replaceG6 = replaceG5.replace(/61%/g, "a");
-var replaceG7 = replaceG6.replace(/62%/g, "b");
-var replaceG8 = replaceG7.replace(/63%/g, "c");
-var replaceG9 = replaceG8.replace(/64%/g, "d");
-var replaceH1 = replaceG9.replace(/65%/g, "e");
-var replaceH2 = replaceH1.replace(/66%/g, "f");
-var replaceH3 = replaceH2.replace(/67%/g, "g");
-var replaceH4 = replaceH3.replace(/68%/g, "h");
-var replaceH5 = replaceH4.replace(/69%/g, "i");
+var replaceG5 = replaceG4.replace(/%60/g, "`");
+var replaceG6 = replaceG5.replace(/%61/g, "a");
+var replaceG7 = replaceG6.replace(/%62/g, "b");
+var replaceG8 = replaceG7.replace(/%63/g, "c");
+var replaceG9 = replaceG8.replace(/%64/g, "d");
+var replaceH1 = replaceG9.replace(/%65/g, "e");
+var replaceH2 = replaceH1.replace(/%66/g, "f");
+var replaceH3 = replaceH2.replace(/%67/g, "g");
+var replaceH4 = replaceH3.replace(/%68/g, "h");
+var replaceH5 = replaceH4.replace(/%69/g, "i");
 var replaceH6 = replaceH5.replace(/%6A/g, "j");
 var replaceH7 = replaceH6.replace(/%6B/g, "k");
 var replaceH8 = replaceH7.replace(/%6C/g, "l");
 var replaceH9 = replaceH8.replace(/%6D/g, "m");
 var replaceI1 = replaceH9.replace(/%6E/g, "n");
 var replaceI2 = replaceI1.replace(/%6F/g, "o");
-var replaceI3 = replaceI2.replace(/70%/g, "p");
-var replaceI4 = replaceI3.replace(/71%/g, "q");
-var replaceI5 = replaceI4.replace(/72%/g, "r");
-var replaceI6 = replaceI5.replace(/73%/g, "s");
-var replaceI7 = replaceI6.replace(/74%/g, "t");
-var replaceI8 = replaceI7.replace(/75%/g, "u");
-var replaceI9 = replaceI8.replace(/76%/g, "v");
-var replaceJ1 = replaceI9.replace(/77%/g, "w");
-var replaceJ2 = replaceJ1.replace(/78%/g, "x");
-var replaceJ3 = replaceJ2.replace(/79%/g, "y");
+var replaceI3 = replaceI2.replace(/%70/g, "p");
+var replaceI4 = replaceI3.replace(/%71/g, "q");
+var replaceI5 = replaceI4.replace(/%72/g, "r");
+var replaceI6 = replaceI5.replace(/%73/g, "s");
+var replaceI7 = replaceI6.replace(/%74/g, "t");
+var replaceI8 = replaceI7.replace(/%75/g, "u");
+var replaceI9 = replaceI8.replace(/%76/g, "v");
+var replaceJ1 = replaceI9.replace(/%77/g, "w");
+var replaceJ2 = replaceJ1.replace(/%78/g, "x");
+var replaceJ3 = replaceJ2.replace(/%79/g, "y");
 var replaceJ4 = replaceJ3.replace(/%7A/g, "z");
 var replaceJ5 = replaceJ4.replace(/%7B/g, "{");
 var replaceJ6 = replaceJ5.replace(/%7C/g, "|");
