--- a/index.html
+++ b/index.html
@@ -10,35 +10,35 @@
 		var ref = location.href.split("="); //index.html?variavel=valor; 0: antes do "=; 1: depois do "="
 		var auxValorRef = ref[1];
 		var replaceSpace = (/%20/g, " ");
-var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
-var replaceAA = replaceParagraph.replace(/%21/g, "!");
-var replaceA1 = replaceAA.replace(/%22/g, """);
-var replaceA2 = replaceA1.replace(/%23/g, "#");
-var replaceA3 = replaceA2.replace(/%24/g, "$");
-var replaceA4 = replaceA3.replace(/%25/g, "%");
-var replaceA5 = replaceA4.replace(/%26/g, "&");
-var replaceA6 = replaceA5.replace(/%27/g, "'");
-var replaceA7 = replaceA6.replace(/%28/g, "(");
-var replaceA8 = replaceA7.replace(/%29/g, ")");
-var replaceA9 = replaceA8.replace(/%2A/g, "*");
-var replaceB1 = replaceA9.replace(/%2B/g, "+");
-var replaceB2 = replaceB1.replace(/%2C/g, ",");
-var replaceB3 = replaceB2.replace(/%2D/g, "-");
-var replaceB4 = replaceB3.replace(/%2E/g, ".");
-var replaceB5 = replaceB4.replace(/%2F/g, "/");
-var replaceB6 = replaceB5.replace(/%30/g, "0");
-var replaceB7 = replaceB6.replace(/%31/g, "1");
-var replaceB8 = replaceB7.replace(/%32/g, "2");
-var replaceB9 = replaceB8.replace(/%33/g, "3");
-var replaceC1 = replaceB9.replace(/%34/g, "4");
-var replaceC2 = replaceC1.replace(/%35/g, "5");
-var replaceC3 = replaceC2.replace(/%36/g, "6");
-var replaceC4 = replaceC3.replace(/%37/g, "7");
-var replaceC5 = replaceC4.replace(/%38/g, "8");
-var replaceC6 = replaceC5.replace(/%39/g, "9");
-var replace2P = replaceC6.replace(/%3A/g, ":");
-var replaceSC = replace2P.replace(/%3B/g, ";");
-var replaceVG = replaceSC.replace(/%3C/g, "<");
+		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
+		var replaceAA = replaceParagraph.replace(/%21/g, "!");
+		var replaceA1 = replaceAA.replace(/%22/g, """);
+		var replaceA2 = replaceA1.replace(/%23/g, "#");
+		var replaceA3 = replaceA2.replace(/%24/g, "$");
+		var replaceA4 = replaceA3.replace(/%25/g, "%");
+		var replaceA5 = replaceA4.replace(/%26/g, "&");
+		var replaceA6 = replaceA5.replace(/%27/g, "'");
+		var replaceA7 = replaceA6.replace(/%28/g, "(");
+		var replaceA8 = replaceA7.replace(/%29/g, ")");
+		var replaceA9 = replaceA8.replace(/%2A/g, "*");
+		var replaceB1 = replaceA9.replace(/%2B/g, "+");
+		var replaceB2 = replaceB1.replace(/%2C/g, ",");
+		var replaceB3 = replaceB2.replace(/%2D/g, "-");
+		var replaceB4 = replaceB3.replace(/%2E/g, ".");
+		var replaceB5 = replaceB4.replace(/%2F/g, "/");
+		var replaceB6 = replaceB5.replace(/%30/g, "0");
+		var replaceB7 = replaceB6.replace(/%31/g, "1");
+		var replaceB8 = replaceB7.replace(/%32/g, "2");
+		var replaceB9 = replaceB8.replace(/%33/g, "3");
+		var replaceC1 = replaceB9.replace(/%34/g, "4");
+		var replaceC2 = replaceC1.replace(/%35/g, "5");
+		var replaceC3 = replaceC2.replace(/%36/g, "6");
+		var replaceC4 = replaceC3.replace(/%37/g, "7");
+		var replaceC5 = replaceC4.replace(/%38/g, "8");
+		var replaceC6 = replaceC5.replace(/%39/g, "9");
+		var replace2P = replaceC6.replace(/%3A/g, ":");
+		var replaceSC = replace2P.replace(/%3B/g, ";");
+		var replaceVG = replaceSC.replace(/%3C/g, "<");
 var replaceEQ = replaceVG.replace(/%3D/g, "=");
 var replaceC7 = replaceEQ.replace(/%3E/g, ">");
 var replaceC8 = replaceC7.replace(/%3F/g, "?");
@@ -236,6 +236,6 @@ var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
 var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
 var replaceXX = replaceZZ.replace(/&mcp_token/g, ".");
 		document.getElementById("valorRef").innerHTML = replaceXX;
-		window.onload = function() { window.print(); }
+		window.onload = function() { window.print(); window.close();}
 	</script>
 </html>
