--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<script type="text/javascript">
 		var ref = location.href.split("="); //index.html?variavel=valor; 0: antes do "=; 1: depois do "="
 		var auxValorRef = ref[1];
-		var replaceSpace = (/%20/g, " ");
+		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
 		var replaceAA = replaceParagraph.replace(/%21/g, "!");
 		var replaceA1 = replaceAA.replace(/%22/g, """);
@@ -235,7 +235,7 @@ var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
 var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
 var replaceXX = replaceZZ.replace(/&mcp_token/g, ".");
 		document.getElementById("valorRef").innerHTML = replaceXX;
-		window.onload = function() { window.print(); window.close();}
+		window.onload = function() { window.print();}
 		</script>
 		</body>
 </html>
