--- a/index.html
+++ b/index.html
@@ -11,231 +11,35 @@
 		var auxValorRef = ref[1];
 		
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
-		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
-		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceA1 = replaceAA.replace(/%22/g, """);
-		var replaceA2 = replaceA1.replace(/%23/g, "#");
-		var replaceA3 = replaceA2.replace(/%24/g, "$");
-		var replaceA4 = replaceA3.replace(/%25/g, "%");
-		var replaceA5 = replaceA4.replace(/%26/g, "&");
-		var replaceA6 = replaceA5.replace(/%27/g, "'");
-		var replaceA7 = replaceA6.replace(/%28/g, "(");
-		var replaceA8 = replaceA7.replace(/%29/g, ")");
-		var replaceA9 = replaceA8.replace(/%2A/g, "*");
-		var replaceB1 = replaceA9.replace(/%2B/g, "+");
-		var replaceB2 = replaceB1.replace(/%2C/g, ",");
-		var replaceB3 = replaceB2.replace(/%2D/g, "-");
-		var replaceB4 = replaceB3.replace(/%2E/g, ".");
-		var replaceB5 = replaceB4.replace(/%2F/g, "/");
-		var replaceB6 = replaceB5.replace(/%30/g, "0");
-		var replaceB7 = replaceB6.replace(/%31/g, "1");
-		var replaceB8 = replaceB7.replace(/%32/g, "2");
-		var replaceB9 = replaceB8.replace(/%33/g, "3");
-		var replaceC1 = replaceB9.replace(/%34/g, "4");
-		var replaceC2 = replaceC1.replace(/%35/g, "5");
-		var replaceC3 = replaceC2.replace(/%36/g, "6");
-		var replaceC4 = replaceC3.replace(/%37/g, "7");
-		var replaceC5 = replaceC4.replace(/%38/g, "8");
-		var replaceC6 = replaceC5.replace(/%39/g, "9");
-		var replace2P = replaceC6.replace(/%3A/g, ":");
-		var replaceSC = replace2P.replace(/%3B/g, ";");
-		var replaceVG = replaceSC.replace(/%3C/g, "<");
-var replaceEQ = replaceVG.replace(/%3D/g, "=");
-var replaceC7 = replaceEQ.replace(/%3E/g, ">");
-var replaceC8 = replaceC7.replace(/%3F/g, "?");
-var replaceC9 = replaceC8.replace(/%40/g, "@");
-var replaceD1 = replaceC9.replace(/%41/g, "A");
-var replaceD2 = replaceD1.replace(/%42/g, "B");
-var replaceD3 = replaceD2.replace(/%43/g, "C");
-var replaceD4 = replaceD3.replace(/%44/g, "D");
-var replaceD5 = replaceD4.replace(/%45/g, "E");
-var replaceD6 = replaceD5.replace(/%46/g, "F");
-var replaceD7 = replaceD6.replace(/%47/g, "G");
-var replaceD8 = replaceD7.replace(/%48/g, "H");
-var replaceD9 = replaceD8.replace(/%49/g, "I");
-var replaceE1 = replaceD9.replace(/%4A/g, "J");
-var replaceE2 = replaceE1.replace(/%4B/g, "K");
-var replaceE3 = replaceE2.replace(/%4C/g, "L");
-var replaceE4 = replaceE3.replace(/%4D/g, "M");
-var replaceE5 = replaceE4.replace(/%4E/g, "N");
-var replaceE6 = replaceE5.replace(/%4F/g, "O");
-var replaceE7 = replaceE6.replace(/%50/g, "P");
-var replaceE8 = replaceE7.replace(/%51/g, "Q");
-var replaceE9 = replaceE8.replace(/%52/g, "R");
-var replaceF1 = replaceE9.replace(/%53/g, "S");
-var replaceF2 = replaceF1.replace(/%54/g, "T");
-var replaceF3 = replaceF2.replace(/%55/g, "U");
-var replaceF4 = replaceF3.replace(/%56/g, "V");
-var replaceF5 = replaceF4.replace(/%57/g, "W");
-var replaceF6 = replaceF5.replace(/%58/g, "X");
-var replaceF7 = replaceF6.replace(/%59/g, "Y");
-var replaceF8 = replaceF7.replace(/%5A/g, "Z");
-var replaceF9 = replaceF8.replace(/%5B/g, "[");
-var replaceG1 = replaceF9.replace(/%5C/g, "\");
-var replaceG2 = replaceG1.replace(/%5D/g, "]");
-var replaceG3 = replaceG2.replace(/%5E/g, "^");
-var replaceG4 = replaceG3.replace(/%5F/g, "_");
-var replaceG5 = replaceG4.replace(/%60/g, "`");
-var replaceG6 = replaceG5.replace(/%61/g, "a");
-var replaceG7 = replaceG6.replace(/%62/g, "b");
-var replaceG8 = replaceG7.replace(/%63/g, "c");
-var replaceG9 = replaceG8.replace(/%64/g, "d");
-var replaceH1 = replaceG9.replace(/%65/g, "e");
-var replaceH2 = replaceH1.replace(/%66/g, "f");
-var replaceH3 = replaceH2.replace(/%67/g, "g");
-var replaceH4 = replaceH3.replace(/%68/g, "h");
-var replaceH5 = replaceH4.replace(/%69/g, "i");
-var replaceH6 = replaceH5.replace(/%6A/g, "j");
-var replaceH7 = replaceH6.replace(/%6B/g, "k");
-var replaceH8 = replaceH7.replace(/%6C/g, "l");
-var replaceH9 = replaceH8.replace(/%6D/g, "m");
-var replaceI1 = replaceH9.replace(/%6E/g, "n");
-var replaceI2 = replaceI1.replace(/%6F/g, "o");
-var replaceI3 = replaceI2.replace(/%70/g, "p");
-var replaceI4 = replaceI3.replace(/%71/g, "q");
-var replaceI5 = replaceI4.replace(/%72/g, "r");
-var replaceI6 = replaceI5.replace(/%73/g, "s");
-var replaceI7 = replaceI6.replace(/%74/g, "t");
-var replaceI8 = replaceI7.replace(/%75/g, "u");
-var replaceI9 = replaceI8.replace(/%76/g, "v");
-var replaceJ1 = replaceI9.replace(/%77/g, "w");
-var replaceJ2 = replaceJ1.replace(/%78/g, "x");
-var replaceJ3 = replaceJ2.replace(/%79/g, "y");
-var replaceJ4 = replaceJ3.replace(/%7A/g, "z");
-var replaceJ5 = replaceJ4.replace(/%7B/g, "{");
-var replaceJ6 = replaceJ5.replace(/%7C/g, "|");
-var replaceJ7 = replaceJ6.replace(/%7D/g, "}");
-var replaceJ8 = replaceJ7.replace(/%7E/g, "~");
-var replaceJ9 = replaceJ8.replace(/%F0%9F%8D%94/g, "🍔");
-var replaceK1 = replaceJ9.replace(/%E2%82%AC/g, "`");
-var replaceK2 = replaceK1.replace(/%E2%9C%85/g, "✅");
-var replaceK3 = replaceK2.replace(/%E2%80%9A/g, "‚");
-var replaceK4 = replaceK3.replace(/%C6%92/g, "ƒ");
-var replaceK5 = replaceK4.replace(/%E2%80%9E/g, "„");
-var replaceK6 = replaceK5.replace(/%E2%80%A6/g, "…");
-var replaceK7 = replaceK6.replace(/%E2%80%A0/g, "†");
-var replaceK8 = replaceK7.replace(/%E2%80%A1/g, "‡");
-var replaceK9 = replaceK8.replace(/%CB%86/g, "ˆ");
-var replaceL1 = replaceK9.replace(/%E2%80%B0/g, "‰");
-var replaceL2 = replaceL1.replace(/%C5%A0/g, "Š");
-var replaceL3 = replaceL2.replace(/%E2%80%B9/g, "‹");
-var replaceL4 = replaceL3.replace(/%C5%92/g, "Œ");
-var replaceL5 = replaceL4.replace(/%E2%9E%95/g, "➕");
-var replaceL6 = replaceL5.replace(/%C5%BD/g, "Ž");
-var replaceL7 = replaceL6.replace(/%F0%9F%A5%A4/g, "🥤");
-var replaceL8 = replaceL7.replace(/%F0%9F%8D%9F/g, "🍟");
-var replaceL9 = replaceL8.replace(/%E2%80%98/g, "‘");
-var replaceM1 = replaceL9.replace(/%E2%80%99/g, "’");
-var replaceM2 = replaceM1.replace(/%E2%80%9C/g, "“");
-var replaceM3 = replaceM2.replace(/%E2%80%9D/g, "”");
-var replaceM4 = replaceM3.replace(/%E2%80%A2/g, "•");
-var replaceM5 = replaceM4.replace(/%E2%80%93/g, "–");
-var replaceM6 = replaceM5.replace(/%E2%80%94/g, "—");
-var replaceM7 = replaceM6.replace(/%CB%9C/g, "˜");
-var replaceM8 = replaceM7.replace(/%E2%84/g, "™");
-var replaceM9 = replaceM8.replace(/%C5%A1/g, "š");
-var replaceN1 = replaceM9.replace(/%E2%80/g, "›");
-var replaceN2 = replaceN1.replace(/%C5%93/g, "œ");
-var replaceN3 = replaceN2.replace(/%F0%9F%92%B0/g, "💰");
-var replaceN4 = replaceN3.replace(/%C5%BE/g, "ž");
-var replaceN5 = replaceN4.replace(/%C5%B8/g, "Ÿ");
-var replaceN6 = replaceN5.replace(/%C2%A0/g, "");
-var replaceN7 = replaceN6.replace(/%C2%A1/g, "¡");
-var replaceN8 = replaceN7.replace(/%C2%A2/g, "¢");
-var replaceN9 = replaceN8.replace(/%C2%A3/g, "£");
-var replaceO1 = replaceN9.replace(/%C2%A4/g, "¤");
-var replaceO2 = replaceO1.replace(/%C2%A5/g, "¥");
-var replaceO3 = replaceO2.replace(/%C2%A6/g, "¦");
-var replaceO4 = replaceO3.replace(/%C2%A7/g, "§");
-var replaceO5 = replaceO4.replace(/%C2%A8/g, "¨");
-var replaceO6 = replaceO5.replace(/%C2%A9/g, "©");
-var replaceO7 = replaceO6.replace(/%C2%AA/g, "ª");
-var replaceO8 = replaceO7.replace(/%C2%AB/g, "«");
-var replaceO9 = replaceO8.replace(/%C2%AC/g, "¬");
-var replaceP1 = replaceO9.replace(/%C2%AD/g, "­");
-var replaceP2 = replaceP1.replace(/%C2%AE/g, "®");
-var replaceP3 = replaceP2.replace(/%C2%AF/g, "¯");
-var replaceP4 = replaceP3.replace(/%C2%B0/g, "°");
-var replaceP5 = replaceP4.replace(/%C2%B1/g, "±");
-var replaceP6 = replaceP5.replace(/%C2%B2/g, "²");
-var replaceP7 = replaceP6.replace(/%C2%B3/g, "³");
-var replaceP8 = replaceP7.replace(/%C2%B4/g, "´");
-var replaceP9 = replaceP8.replace(/%C2%B5/g, "µ");
-var replaceQ1 = replaceP9.replace(/%C2%B6/g, "¶");
-var replaceQ2 = replaceQ1.replace(/%C2%B7/g, "·");
-var replaceQ3 = replaceQ2.replace(/%C2%B8/g, "¸");
-var replaceQ4 = replaceQ3.replace(/%C2%B9/g, "¹");
-var replaceQ5 = replaceQ4.replace(/%C2%BA/g, "º");
-var replaceQ6 = replaceQ5.replace(/%C2%BB/g, "»");
-var replaceQ7 = replaceQ6.replace(/%C2%BC/g, "¼");
-var replaceQ8 = replaceQ7.replace(/%C2%BD/g, "½");
-var replaceQ9 = replaceQ8.replace(/%C2%BE/g, "¾");
-var replaceR1 = replaceQ9.replace(/%C2%BF/g, "¿");
-var replaceR2 = replaceR1.replace(/%C3%80/g, "À");
-var replaceR3 = replaceR2.replace(/%C3%81/g, "Á");
-var replaceR4 = replaceR3.replace(/%C3%82/g, "Â");
-var replaceR5 = replaceR4.replace(/%C3%83/g, "Ã");
-var replaceR6 = replaceR5.replace(/%C3%84/g, "Ä");
-var replaceR7 = replaceR6.replace(/%C3%85/g, "Å");
-var replaceR8 = replaceR7.replace(/%C3%86/g, "Æ");
-var replaceR9 = replaceR8.replace(/%C3%87/g, "Ç");
-var replaceS1 = replaceR9.replace(/%C3%88/g, "È");
-var replaceS2 = replaceS1.replace(/%C3%89/g, "É");
-var replaceS3 = replaceS2.replace(/%C3%8A/g, "Ê");
-var replaceS4 = replaceS3.replace(/%C3%8B/g, "Ë");
-var replaceS5 = replaceS4.replace(/%C3%8C/g, "Ì");
-var replaceS6 = replaceS5.replace(/%C3%8D/g, "Í");
-var replaceS7 = replaceS6.replace(/%C3%8E/g, "Î");
-var replaceS8 = replaceS7.replace(/%C3%8F/g, "Ï");
-var replaceS9 = replaceS8.replace(/%C3%90/g, "Ð");
-var replaceU1 = replaceS9.replace(/%C3%91/g, "Ñ");
-var replaceU2 = replaceU1.replace(/%C3%92/g, "Ò");
-var replaceU3 = replaceU2.replace(/%C3%93/g, "Ó");
-var replaceU4 = replaceU3.replace(/%C3%94/g, "Ô");
-var replaceU5 = replaceU4.replace(/%C3%95/g, "Õ");
-var replaceU6 = replaceU5.replace(/%C3%96/g, "Ö");
-var replaceU7 = replaceU6.replace(/%C3%97/g, "×");
-var replaceU8 = replaceU7.replace(/%C3%98/g, "Ø");
-var replaceU9 = replaceU8.replace(/%C3%99/g, "Ù");
-var replaceV1 = replaceU9.replace(/%C3%9A/g, "Ú");
-var replaceV2 = replaceV1.replace(/%C3%9B/g, "Û");
-var replaceV3 = replaceV2.replace(/%C3%9C/g, "Ü");
-var replaceV4 = replaceV3.replace(/%C3%9D/g, "Ý");
-var replaceV5 = replaceV4.replace(/%C3%9E/g, "Þ");
-var replaceV6 = replaceV5.replace(/%C3%9F/g, "ß");
-var replaceV7 = replaceV6.replace(/%C3%A0/g, "à");
-var replaceV8 = replaceV7.replace(/%C3%A1/g, "á");
-var replaceV9 = replaceV8.replace(/%C3%A2/g, "â");
-var replaceX1 = replaceV9.replace(/%C3%A3/g, "ã");
-var replaceX2 = replaceX1.replace(/%C3%A4/g, "ä");
-var replaceX3 = replaceX2.replace(/%C3%A5/g, "å");
-var replaceX4 = replaceX3.replace(/%C3%A6/g, "æ");
-var replaceX5 = replaceX4.replace(/%C3%A7/g, "ç");
-var replaceX6 = replaceX5.replace(/%C3%A8/g, "è");
-var replaceX7 = replaceX6.replace(/%C3%A9/g, "é");
-var replaceX8 = replaceX7.replace(/%C3%AA/g, "ê");
-var replaceX9 = replaceX8.replace(/%C3%AB/g, "ë");
-var replaceY1 = replaceX9.replace(/%C3%AC/g, "ì");
-var replaceY2 = replaceY1.replace(/%C3%AD/g, "í");
-var replaceY3 = replaceY2.replace(/%C3%AE/g, "î");
-var replaceY4 = replaceY3.replace(/%C3%AF/g, "ï");
-var replaceY5 = replaceY4.replace(/%C3%B0/g, "ð");
-var replaceY6 = replaceY5.replace(/%C3%B1/g, "ñ");
-var replaceY7 = replaceY6.replace(/%C3%B2/g, "ò");
-var replaceY8 = replaceY7.replace(/%C3%B3/g, "ó");
-var replaceY9 = replaceY8.replace(/%C3%B4/g, "ô");
-var replaceZ1 = replaceY9.replace(/%C3%B5/g, "õ");
-var replaceZ2 = replaceZ1.replace(/%C3%B6/g, "ö");
-var replaceZ3 = replaceZ2.replace(/%C3%B7/g, "÷");
-var replaceZ4 = replaceZ3.replace(/%C3%B8/g, "ø");
-var replaceZ5 = replaceZ4.replace(/%C3%B9/g, "ù");
-var replaceZ6 = replaceZ5.replace(/%C3%BA/g, "ú");
-var replaceZ7 = replaceZ6.replace(/%C3%BB/g, "û");
-var replaceZ8 = replaceZ7.replace(/%C3%BC/g, "ü");
-var replaceZ9 = replaceZ8.replace(/%C3%BD/g, "ý");
-var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
-var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
-		var replaceXX = replaceZZ.replace(/&mcp_token/g, ".");
+		var replaceParagraph = replaceSpace.replace(/%25_%25/g, "<br>");
+		var replaceA1 = replaceParagraph.replace(/%C3%A0/g, "à");
+		var replaceA2 = replaceA1.replace(/%C3%A1/g, "á");
+		var replaceA3 = replaceA2.replace(/%C3%A2/g, "â");
+		var replaceA4 = replaceA3.replace(/%C3%A3/g, "ã");
+		var replaceA5 = replaceA4.replace(/%C3%80/g, "À");
+		var replaceA6 = replaceA5.replace(/%C3%81/g, "Á");
+		var replaceA7 = replaceA6.replace(/%C3%82/g, "Â");
+		var replaceA8 = replaceA7.replace(/%C3%83/g, "Ã");
+		var replaceO1 = replaceA8.replace(/%C3%B3/g, "ó");
+		var replaceO2 = replaceO1.replace(/%C3%B4/g, "ô");
+		var replaceO3 = replaceO2.replace(/%C3%B5/g, "õ");
+		var replaceO4 = replaceO3.replace(/%C3%93/g, "Ó");
+		var replaceO5 = replaceO4.replace(/%C3%94/g, "Ô");
+		var replaceO6 = replaceO5.replace(/%C3%95/g, "Õ");
+		var replaceE1 = replaceO6.replace(/%C3%A9/g, "é");
+		var replaceE2 = replaceE1.replace(/%C3%AA/g, "ê");
+		var replaceE3 = replaceE2.replace(/%C3%89/g, "É");
+		var replaceE4 = replaceE3.replace(/%C3%8A/g, "Ê");
+		var replaceI1 = replaceE4.replace(/%C3%8D/g, "Í");
+		var replaceI2 = replaceI1.replace(/%C3%AD/g, "í");
+		var replaceU1 = replaceI2.replace(/%C3%BA/g, "ú");
+		var replaceU2 = replaceU1.replace(/%C3%9A/g, "Ú");
+		var replaceC1 = replaceU2.replace(/%C3%A7/g, "ç");
+		var replaceC2 = replaceC1.replace(/%C3%87/g, "Ç");
+		var replace2P = replaceC2.replace(/%3A/g, ":");
+		var replaceSC = replace2P.replace(/%24/g, "$");
+		var replaceVG = replaceSC.replace(/%2C/g, ",");
+		var replaceXX = replaceVG.replace(/&mcp_token/g, ".");
 
 		document.getElementById("valorRef").innerHTML = replaceXX;
 		window.onload = function() { window.print(); window.close();}
