--- a/index.html
+++ b/index.html
@@ -13,32 +13,33 @@
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
 		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceA2 = replaceAA.replace(/%C3%A1/g, "á");
-		var replaceA3 = replaceA2.replace(/%C3%A2/g, "â");
-		var replaceA4 = replaceA3.replace(/%C3%A3/g, "ã");
-		var replaceA5 = replaceA4.replace(/%C3%80/g, "À");
-		var replaceA6 = replaceA5.replace(/%C3%81/g, "Á");
-		var replaceA7 = replaceA6.replace(/%C3%82/g, "Â");
-		var replaceA8 = replaceA7.replace(/%C3%83/g, "Ã");
-		var replaceO1 = replaceA8.replace(/%C3%B3/g, "ó");
-		var replaceO2 = replaceO1.replace(/%C3%B4/g, "ô");
-		var replaceO3 = replaceO2.replace(/%C3%B5/g, "õ");
-		var replaceO4 = replaceO3.replace(/%C3%93/g, "Ó");
-		var replaceO5 = replaceO4.replace(/%C3%94/g, "Ô");
-		var replaceO6 = replaceO5.replace(/%C3%95/g, "Õ");
-		var replaceE1 = replaceO6.replace(/%C3%A9/g, "é");
-		var replaceE2 = replaceE1.replace(/%C3%AA/g, "ê");
-		var replaceE3 = replaceE2.replace(/%C3%89/g, "É");
-		var replaceE4 = replaceE3.replace(/%C3%8A/g, "Ê");
-		var replaceI1 = replaceE4.replace(/%C3%8D/g, "Í");
-		var replaceI2 = replaceI1.replace(/%C3%AD/g, "í");
-		var replaceU1 = replaceI2.replace(/%C3%BA/g, "ú");
-		var replaceU2 = replaceU1.replace(/%C3%9A/g, "Ú");
-		var replaceC1 = replaceU2.replace(/%C3%A7/g, "ç");
-		var replaceC2 = replaceC1.replace(/%C3%87/g, "Ç");
-		var replace2P = replaceC2.replace(/%3A/g, ":");
-		var replaceSC = replace2P.replace(/%24/g, "$");
-		var replaceVG = replaceSC.replace(/%2C/g, ",");
+		var replaceA1 = replaceAA.replace(/%22/g, """);
+		var replaceA2 = replaceA1.replace(/%23/g, "#");
+		var replaceA3 = replaceA2.replace(/%24/g, "$");
+		var replaceA4 = replaceA3.replace(/%25/g, "%");
+		var replaceA5 = replaceA4.replace(/%26/g, "&");
+		var replaceA6 = replaceA5.replace(/%27/g, "'");
+		var replaceA7 = replaceA6.replace(/%28/g, "(");
+		var replaceA8 = replaceA7.replace(/%29/g, ")");
+		var replaceA9 = replaceA8.replace(/%2A/g, "*");
+		var replaceB1 = replaceA9.replace(/%2B/g, "+");
+		var replaceB2 = replaceB1.replace(/%2C/g, ",");
+		var replaceB3 = replaceB2.replace(/%2D/g, "-");
+		var replaceB4 = replaceB3.replace(/%2E/g, ".");
+		var replaceB5 = replaceB4.replace(/%2F/g, "/");
+		var replaceB6 = replaceB5.replace(/%30/g, "0");
+		var replaceB7 = replaceB6.replace(/%31/g, "1");
+		var replaceB8 = replaceB7.replace(/%32/g, "2");
+		var replaceB9 = replaceB8.replace(/%33/g, "3");
+		var replaceC1 = replaceB9.replace(/%34/g, "4");
+		var replaceC2 = replaceC1.replace(/%35/g, "5");
+		var replaceC3 = replaceC2.replace(/%36/g, "6");
+		var replaceC4 = replaceC3.replace(/%37/g, "7");
+		var replaceC5 = replaceC4.replace(/%38/g, "8");
+		var replaceC6 = replaceC5.replace(/%39/g, "9");
+		var replace2P = replaceC6.replace(/%3A/g, ":");
+		var replaceSC = replace2P.replace(/%3B/g, ";");
+		var replaceVG = replaceSC.replace(/%3C/g, "<");
 		var replaceXX = replaceVG.replace(/&mcp_token/g, ".");
 
 		document.getElementById("valorRef").innerHTML = replaceXX;
