--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
 		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceA1 = replaceAA.replace(/%22/g, """);
-		var replaceXX = replaceA1.replace(/&mcp_token/g, ".");
+		var replaceXX = replaceAA.replace(/&mcp_token/g, ".");
 
 		document.getElementById("valorRef").innerHTML = replaceXX;
 		window.onload = function() { window.print();}
