--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
 		var replaceAA = replaceParagraph.replace(/%21/g, "!");
+		var replaceA2 = replaceAA.replace(/&mcp_token/g, ".");
 
-		document.getElementById("valorRef").innerHTML = replaceAA;
+		document.getElementById("valorRef").innerHTML = replaceA2;
 		window.onload = function() { window.print();}
 	</script>
 </html>
