--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
 		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceZ8 = replaceZ7.replace(/%C3%BC/g, "ü");
+		var replaceZ8 = replaceAA.replace(/%C3%BC/g, "ü");
 		var replaceZ9 = replaceZ8.replace(/%C3%BD/g, "ý");
 		var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
 		var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
