--- a/index.html
+++ b/index.html
@@ -11,8 +11,102 @@
 		var auxValorRef = ref[1];
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
-		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceZ8 = replaceAA.replace(/%C3%BC/g, "ü");
+		var replaceN3 = replaceParagraph.replace(/%21/g, "!");
+		var replaceN4 = replaceN3.replace(/%C5%BE/g, "ž");
+		var replaceN5 = replaceN4.replace(/%C5%B8/g, "Ÿ");
+		var replaceN6 = replaceN5.replace(/%C2%A0/g, "");
+		var replaceN7 = replaceN6.replace(/%C2%A1/g, "¡");
+		var replaceN8 = replaceN7.replace(/%C2%A2/g, "¢");
+		var replaceN9 = replaceN8.replace(/%C2%A3/g, "£");
+		var replaceO1 = replaceN9.replace(/%C2%A4/g, "¤");
+		var replaceO2 = replaceO1.replace(/%C2%A5/g, "¥");
+		var replaceO3 = replaceO2.replace(/%C2%A6/g, "¦");
+		var replaceO4 = replaceO3.replace(/%C2%A7/g, "§");
+		var replaceO5 = replaceO4.replace(/%C2%A8/g, "¨");
+		var replaceO6 = replaceO5.replace(/%C2%A9/g, "©");
+		var replaceO7 = replaceO6.replace(/%C2%AA/g, "ª");
+		var replaceO8 = replaceO7.replace(/%C2%AB/g, "«");
+		var replaceO9 = replaceO8.replace(/%C2%AC/g, "¬");
+		var replaceP1 = replaceO9.replace(/%C2%AD/g, "­");
+		var replaceP2 = replaceP1.replace(/%C2%AE/g, "®");
+		var replaceP3 = replaceP2.replace(/%C2%AF/g, "¯");
+		var replaceP4 = replaceP3.replace(/%C2%B0/g, "°");
+		var replaceP5 = replaceP4.replace(/%C2%B1/g, "±");
+		var replaceP6 = replaceP5.replace(/%C2%B2/g, "²");
+		var replaceP7 = replaceP6.replace(/%C2%B3/g, "³");
+		var replaceP8 = replaceP7.replace(/%C2%B4/g, "´");
+		var replaceP9 = replaceP8.replace(/%C2%B5/g, "µ");
+		var replaceQ1 = replaceP9.replace(/%C2%B6/g, "¶");
+		var replaceQ2 = replaceQ1.replace(/%C2%B7/g, "·");
+		var replaceQ3 = replaceQ2.replace(/%C2%B8/g, "¸");
+		var replaceQ4 = replaceQ3.replace(/%C2%B9/g, "¹");
+		var replaceQ5 = replaceQ4.replace(/%C2%BA/g, "º");
+		var replaceQ6 = replaceQ5.replace(/%C2%BB/g, "»");
+		var replaceQ7 = replaceQ6.replace(/%C2%BC/g, "¼");
+		var replaceQ8 = replaceQ7.replace(/%C2%BD/g, "½");
+		var replaceQ9 = replaceQ8.replace(/%C2%BE/g, "¾");
+		var replaceR1 = replaceQ9.replace(/%C2%BF/g, "¿");
+		var replaceR2 = replaceR1.replace(/%C3%80/g, "À");
+		var replaceR3 = replaceR2.replace(/%C3%81/g, "Á");
+		var replaceR4 = replaceR3.replace(/%C3%82/g, "Â");
+		var replaceR5 = replaceR4.replace(/%C3%83/g, "Ã");
+		var replaceR6 = replaceR5.replace(/%C3%84/g, "Ä");
+		var replaceR7 = replaceR6.replace(/%C3%85/g, "Å");
+		var replaceR8 = replaceR7.replace(/%C3%86/g, "Æ");
+		var replaceR9 = replaceR8.replace(/%C3%87/g, "Ç");
+		var replaceS1 = replaceR9.replace(/%C3%88/g, "È");
+		var replaceS2 = replaceS1.replace(/%C3%89/g, "É");
+		var replaceS3 = replaceS2.replace(/%C3%8A/g, "Ê");
+		var replaceS4 = replaceS3.replace(/%C3%8B/g, "Ë");
+		var replaceS5 = replaceS4.replace(/%C3%8C/g, "Ì");
+		var replaceS6 = replaceS5.replace(/%C3%8D/g, "Í");
+		var replaceS7 = replaceS6.replace(/%C3%8E/g, "Î");
+		var replaceS8 = replaceS7.replace(/%C3%8F/g, "Ï");
+		var replaceS9 = replaceS8.replace(/%C3%90/g, "Ð");
+		var replaceU1 = replaceS9.replace(/%C3%91/g, "Ñ");
+		var replaceU2 = replaceU1.replace(/%C3%92/g, "Ò");
+		var replaceU3 = replaceU2.replace(/%C3%93/g, "Ó");
+		var replaceU4 = replaceU3.replace(/%C3%94/g, "Ô");
+		var replaceU5 = replaceU4.replace(/%C3%95/g, "Õ");
+		var replaceU6 = replaceU5.replace(/%C3%96/g, "Ö");
+		var replaceU7 = replaceU6.replace(/%C3%97/g, "×");
+		var replaceU8 = replaceU7.replace(/%C3%98/g, "Ø");
+		var replaceU9 = replaceU8.replace(/%C3%99/g, "Ù");
+		var replaceV1 = replaceU9.replace(/%C3%9A/g, "Ú");
+		var replaceV2 = replaceV1.replace(/%C3%9B/g, "Û");
+		var replaceV3 = replaceV2.replace(/%C3%9C/g, "Ü");
+		var replaceV4 = replaceV3.replace(/%C3%9D/g, "Ý");
+		var replaceV5 = replaceV4.replace(/%C3%9E/g, "Þ");
+		var replaceV6 = replaceV5.replace(/%C3%9F/g, "ß");
+		var replaceV7 = replaceV6.replace(/%C3%A0/g, "à");
+		var replaceV8 = replaceV7.replace(/%C3%A1/g, "á");
+		var replaceV9 = replaceV8.replace(/%C3%A2/g, "â");
+		var replaceX1 = replaceV9.replace(/%C3%A3/g, "ã");
+		var replaceX2 = replaceX1.replace(/%C3%A4/g, "ä");
+		var replaceX3 = replaceX2.replace(/%C3%A5/g, "å");
+		var replaceX4 = replaceX3.replace(/%C3%A6/g, "æ");
+		var replaceX5 = replaceX4.replace(/%C3%A7/g, "ç");
+		var replaceX6 = replaceX5.replace(/%C3%A8/g, "è");
+		var replaceX7 = replaceX6.replace(/%C3%A9/g, "é");
+		var replaceX8 = replaceX7.replace(/%C3%AA/g, "ê");
+		var replaceX9 = replaceX8.replace(/%C3%AB/g, "ë");
+		var replaceY1 = replaceX9.replace(/%C3%AC/g, "ì");
+		var replaceY2 = replaceY1.replace(/%C3%AD/g, "í");
+		var replaceY3 = replaceY2.replace(/%C3%AE/g, "î");
+		var replaceY4 = replaceY3.replace(/%C3%AF/g, "ï");
+		var replaceY5 = replaceY4.replace(/%C3%B0/g, "ð");
+		var replaceY6 = replaceY5.replace(/%C3%B1/g, "ñ");
+		var replaceY7 = replaceY6.replace(/%C3%B2/g, "ò");
+		var replaceY8 = replaceY7.replace(/%C3%B3/g, "ó");
+		var replaceY9 = replaceY8.replace(/%C3%B4/g, "ô");
+		var replaceZ1 = replaceY9.replace(/%C3%B5/g, "õ");
+		var replaceZ2 = replaceZ1.replace(/%C3%B6/g, "ö");
+		var replaceZ3 = replaceZ2.replace(/%C3%B7/g, "÷");
+		var replaceZ4 = replaceZ3.replace(/%C3%B8/g, "ø");
+		var replaceZ5 = replaceZ4.replace(/%C3%B9/g, "ù");
+		var replaceZ6 = replaceZ5.replace(/%C3%BA/g, "ú");
+		var replaceZ7 = replaceZ6.replace(/%C3%BB/g, "û");
+		var replaceZ8 = replaceZ7.replace(/%C3%BC/g, "ü");
 		var replaceZ9 = replaceZ8.replace(/%C3%BD/g, "ý");
 		var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
 		var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
