--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 		var auxValorRef = ref[1];
 		var replaceSpace = auxValorRef.replace(/%20/g, " ");
 		var replaceParagraph = replaceSpace.replace(/%0A/g, "<br>");
-		var replaceAA = replaceParagraph.replace(/%21/g, "!");
-		var replaceA1 = replaceAA.replace(/%22/g, """);
-		var replaceAB = replaceA1.replace(/%23/g, "#");
-		var replaceA3 = replaceAB.replace(/%24/g, "$");
+		var replaceA1 = replaceParagraph.replace(/%21/g, "!");
+		var replaceA2 = replaceA1.replace(/%23/g, "#");
+		var replaceA3 = replaceA2.replace(/%24/g, "$");
 		var replaceA4 = replaceA3.replace(/%25/g, "%");
 		var replaceA5 = replaceA4.replace(/%26/g, "&");
 		var replaceA6 = replaceA5.replace(/%27/g, "'");
