--- a/index.html
+++ b/index.html
@@ -108,8 +108,7 @@
 		var replaceK1 = replaceJ9.replace(/%E2%82%AC/g, "`");
 		var replaceK2 = replaceK1.replace(/%E2%9C%85/g, "✅");
 		var replaceK3 = replaceK2.replace(/%E2%80%9A/g, "‚");
-		var replaceK4 = replaceK3.replace(/%C6%92/g, "ƒ");
-		var replaceK5 = replaceK4.replace(/%E2%80%9E/g, "„");
+		var replaceK5 = replaceK3.replace(/%E2%80%9E/g, "„");
 		var replaceK6 = replaceK5.replace(/%E2%80%A6/g, "…");
 		var replaceK7 = replaceK6.replace(/%E2%80%A0/g, "†");
 		var replaceK8 = replaceK7.replace(/%E2%80%A1/g, "‡");
@@ -117,8 +116,7 @@
 		var replaceL1 = replaceK9.replace(/%E2%80%B0/g, "‰");
 		var replaceL2 = replaceL1.replace(/%C5%A0/g, "Š");
 		var replaceL3 = replaceL2.replace(/%E2%80%B9/g, "‹");
-		var replaceL4 = replaceL3.replace(/%C5%92/g, "Œ");
-		var replaceL5 = replaceL4.replace(/%E2%9E%95/g, "➕");
+		var replaceL5 = replaceL3.replace(/%E2%9E%95/g, "➕");
 		var replaceL6 = replaceL5.replace(/%C5%BD/g, "Ž");
 		var replaceL7 = replaceL6.replace(/%F0%9F%A5%A4/g, "🥤");
 		var replaceL8 = replaceL7.replace(/%F0%9F%8D%9F/g, "🍟");
@@ -131,26 +129,20 @@
 		var replaceM6 = replaceM5.replace(/%E2%80%94/g, "—");
 		var replaceM7 = replaceM6.replace(/%CB%9C/g, "˜");
 		var replaceM8 = replaceM7.replace(/%E2%84/g, "™");
-		var replaceM9 = replaceM8.replace(/%C5%A1/g, "š");
-		var replaceN1 = replaceM9.replace(/%E2%80/g, "›");
+		var replaceN1 = replaceM8.replace(/%E2%80/g, "›");
 		var replaceN2 = replaceN1.replace(/%C5%93/g, "œ");
 		var replaceN3 = replaceN2.replace(/%F0%9F%92%B0/g, "💰");
-		var replaceN4 = replaceN3.replace(/%C5%BE/g, "ž");
-		var replaceN5 = replaceN4.replace(/%C5%B8/g, "Ÿ");
-		var replaceN6 = replaceN5.replace(/%C2%A0/g, "");
+		var replaceN6 = replaceN3.replace(/%C2%A0/g, "");
 		var replaceN7 = replaceN6.replace(/%C2%A1/g, "¡");
 		var replaceN8 = replaceN7.replace(/%C2%A2/g, "¢");
 		var replaceN9 = replaceN8.replace(/%C2%A3/g, "£");
-		var replaceO1 = replaceN9.replace(/%C2%A4/g, "¤");
-		var replaceO2 = replaceO1.replace(/%C2%A5/g, "¥");
-		var replaceO3 = replaceO2.replace(/%C2%A6/g, "¦");
+		var replaceO3 = replaceN9.replace(/%C2%A6/g, "¦");
 		var replaceO4 = replaceO3.replace(/%C2%A7/g, "§");
 		var replaceO5 = replaceO4.replace(/%C2%A8/g, "¨");
 		var replaceO6 = replaceO5.replace(/%C2%A9/g, "©");
 		var replaceO7 = replaceO6.replace(/%C2%AA/g, "ª");
 		var replaceO8 = replaceO7.replace(/%C2%AB/g, "«");
-		var replaceO9 = replaceO8.replace(/%C2%AC/g, "¬");
-		var replaceP1 = replaceO9.replace(/%C2%AD/g, "­");
+		var replaceP1 = replaceO8.replace(/%C2%AD/g, "­");
 		var replaceP2 = replaceP1.replace(/%C2%AE/g, "®");
 		var replaceP3 = replaceP2.replace(/%C2%AF/g, "¯");
 		var replaceP4 = replaceP3.replace(/%C2%B0/g, "°");
@@ -159,8 +151,7 @@
 		var replaceP7 = replaceP6.replace(/%C2%B3/g, "³");
 		var replaceP8 = replaceP7.replace(/%C2%B4/g, "´");
 		var replaceP9 = replaceP8.replace(/%C2%B5/g, "µ");
-		var replaceQ1 = replaceP9.replace(/%C2%B6/g, "¶");
-		var replaceQ2 = replaceQ1.replace(/%C2%B7/g, "·");
+		var replaceQ2 = replaceP9.replace(/%C2%B7/g, "·");
 		var replaceQ3 = replaceQ2.replace(/%C2%B8/g, "¸");
 		var replaceQ4 = replaceQ3.replace(/%C2%B9/g, "¹");
 		var replaceQ5 = replaceQ4.replace(/%C2%BA/g, "º");
@@ -185,8 +176,7 @@
 		var replaceS6 = replaceS5.replace(/%C3%8D/g, "Í");
 		var replaceS7 = replaceS6.replace(/%C3%8E/g, "Î");
 		var replaceS8 = replaceS7.replace(/%C3%8F/g, "Ï");
-		var replaceS9 = replaceS8.replace(/%C3%90/g, "Ð");
-		var replaceU1 = replaceS9.replace(/%C3%91/g, "Ñ");
+		var replaceU1 = replaceS8.replace(/%C3%91/g, "Ñ");
 		var replaceU2 = replaceU1.replace(/%C3%92/g, "Ò");
 		var replaceU3 = replaceU2.replace(/%C3%93/g, "Ó");
 		var replaceU4 = replaceU3.replace(/%C3%94/g, "Ô");
@@ -231,8 +221,7 @@
 		var replaceZ7 = replaceZ6.replace(/%C3%BB/g, "û");
 		var replaceZ8 = replaceZ7.replace(/%C3%BC/g, "ü");
 		var replaceZ9 = replaceZ8.replace(/%C3%BD/g, "ý");
-		var replaceYY = replaceZ9.replace(/%C3%BE/g, "þ");
-		var replaceZZ = replaceYY.replace(/%C3%BF/g, "ÿ");
+		var replaceZZ = replaceZ9.replace(/%C3%BF/g, "ÿ");
 		var replaceXX = replaceZZ.replace(/&mcp_token/g, ".");
 
 		document.getElementById("valorRef").innerHTML = replaceXX;
