--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 		var replaceF7 = replaceF6.replace(/%59/g, "Y");
 		var replaceF8 = replaceF7.replace(/%5A/g, "Z");
 		var replaceF9 = replaceF8.replace(/%5B/g, "[");
-		var replaceG2 = replaceG1.replace(/%5D/g, "]");
+		var replaceG2 = replaceF9.replace(/%5D/g, "]");
 		var replaceG3 = replaceG2.replace(/%5E/g, "^");
 		var replaceG4 = replaceG3.replace(/%5F/g, "_");
 		var replaceG5 = replaceG4.replace(/%60/g, "`");
